# kmeans-hpc

./: CMakeLists.txt  main.cpp  raport.md
include/: data_loader.h  distributed_kmeans.h  kmeans.h  old_parallel_kmeans.h  parallel_kmeans.h  profiler_utils.h  utils.h
results/: mpi_log_rank_0.csv  mpi_log_rank_1.csv  mpi_log_rank_2.csv  mpi_log_rank_3.csv  mpi_log_rank_4.csv  mpi_log_rank_5.csv  mpi_log_rank_6.csv  mpi_log_rank_7.csv  plot_complexity.py  plot_gantt.py  raport.md  scalabilityplot.py  wyniki.md
src/: data_loader.cpp  distributed_kmeans.cpp  kmeans.cpp  main.cpp  old_parallel_kmeans.cpp  parallel_kmeans.cpp
